[gd_scene load_steps=6 format=2]

[ext_resource path="res://Picture/Boot/PathBG5_4_All.png" type="Texture" id=1]
[ext_resource path="res://Script/Scene/BootScene.gd" type="Script" id=2]
[ext_resource path="res://Shader/DiamondBasedScreenTransition_XLine.shader" type="Shader" id=3]
[ext_resource path="res://UI/CommonUI/CommonLabel.tscn" type="PackedScene" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/progress = 0.0
shader_param/diamondPixelSize = 20.0

[node name="BootScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="colorRectBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.258824, 0.258824, 0.258824, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="textureRect1" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -550.0
margin_top = -50.0
margin_right = 550.0
margin_bottom = 50.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="commonLabelStarting" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = 52.0
margin_right = 29.5
margin_bottom = 75.0
text = "Starting"
